[gd_scene load_steps=25 format=3 uid="uid://dur5nevu7cin8"]

[ext_resource type="Script" uid="uid://dsew7m8ngiyqm" path="res://Scripts/Base Scene Script/Lvl5.gd" id="1_s53du"]
[ext_resource type="Texture2D" uid="uid://uc84txl0rsyy" path="res://Assets/Terrain Texture/Conveyor Belt/Conveyor Belt Tile 1.png" id="2_5hwcm"]
[ext_resource type="Texture2D" uid="uid://cout6bca5u3qv" path="res://Assets/Terrain Texture/grass.png" id="2_v3l1l"]
[ext_resource type="Texture2D" uid="uid://clu141eyajsm7" path="res://Assets/Selettore.png" id="3_s53du"]
[ext_resource type="Texture2D" uid="uid://d27h1vlrudpmr" path="res://Assets/Terrain Texture/Conveyor Belt/Conveyor Belt Tile 2.png" id="4_xk3qw"]
[ext_resource type="Texture2D" uid="uid://d2wwy4s3slqh8" path="res://Assets/Terrain Texture/Industrial Tile Test.png" id="5_d1s80"]
[ext_resource type="Texture2D" uid="uid://dxek6vkt8k8eq" path="res://Assets/Terrain Texture/Incinerator/Inceneritore Closed.png" id="5_evuaq"]
[ext_resource type="PackedScene" uid="uid://ckndwo137esko" path="res://Scenes/Utilities/GameOverUI.tscn" id="8_58mf7"]
[ext_resource type="Texture2D" uid="uid://6nrwjma8m0rf" path="res://Assets/Terrain Texture/Better Industrial Tile.png" id="8_76qj4"]
[ext_resource type="PackedScene" uid="uid://ynbv47vh6qjk" path="res://Scenes/Managers/turret_manager.tscn" id="9_py7eb"]
[ext_resource type="PackedScene" uid="uid://cjoobhnq7wt5i" path="res://Scenes/Utilities/new_UI.tscn" id="9_xk3qw"]
[ext_resource type="PackedScene" uid="uid://m8fnpf42kpe4" path="res://Scenes/Utilities/enemy_spawner.tscn" id="10_l5mna"]
[ext_resource type="PackedScene" uid="uid://cnppbimtf26sx" path="res://Scenes/Managers/point_manager.tscn" id="11_dpoto"]
[ext_resource type="Script" uid="uid://bkr8up3j6mvt7" path="res://Scripts/Utility/grid_initializer.gd" id="11_lhqd2"]
[ext_resource type="PackedScene" uid="uid://12p1be5lu4o4" path="res://Scenes/Utilities/colorscale_filter.tscn" id="15_lkvta"]
[ext_resource type="PackedScene" uid="uid://bhagnqcntnk8k" path="res://Scenes/Utilities/victory_screen.tscn" id="16_evuaq"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5i5n3"]
texture = ExtResource("2_5hwcm")
texture_region_size = Vector2i(160, 160)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_skwcj"]
texture = ExtResource("2_v3l1l")
texture_region_size = Vector2i(160, 160)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6kmrm"]
texture = ExtResource("4_xk3qw")
texture_region_size = Vector2i(160, 160)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_thctk"]
texture = ExtResource("5_d1s80")
texture_region_size = Vector2i(160, 160)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_44lgw"]
texture = ExtResource("5_evuaq")
texture_region_size = Vector2i(160, 160)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_culam"]
texture = ExtResource("3_s53du")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qlugu"]
texture = ExtResource("8_76qj4")
texture_region_size = Vector2i(160, 160)
0:0/0 = 0
1:0/0 = 0
3:0/0 = 0
2:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0

[sub_resource type="TileSet" id="TileSet_qfrpf"]
tile_size = Vector2i(160, 160)
sources/1 = SubResource("TileSetAtlasSource_skwcj")
sources/5 = SubResource("TileSetAtlasSource_culam")
sources/0 = SubResource("TileSetAtlasSource_5i5n3")
sources/2 = SubResource("TileSetAtlasSource_6kmrm")
sources/3 = SubResource("TileSetAtlasSource_thctk")
sources/4 = SubResource("TileSetAtlasSource_44lgw")
sources/6 = SubResource("TileSetAtlasSource_qlugu")

[node name="Main" type="Node2D" node_paths=PackedStringArray("tilemap", "ui_controller")]
script = ExtResource("1_s53du")
tilemap = NodePath("TileMap")
ui_controller = NodePath("UI")

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
position = Vector2(80, 160)
tile_set = SubResource("TileSet_qfrpf")
rendering_quadrant_size = 128
format = 2
layer_0/tile_data = PackedInt32Array(13, 1, 0, 14, 1, 0, 65549, 1, 0, 65550, 1, 0, 131085, 1, 0, 131086, 1, 0, 196622, 1, 0, 262158, 1, 0, 327694, 1, 0, 393216, 6, 0, 393217, 6, 0, 393218, 6, 0, 393219, 6, 0, 393220, 6, 0, 393221, 6, 0, 393222, 6, 0, 393223, 6, 0, 393224, 6, 0, 393225, 6, 0, 393226, 6, 0, 393227, 6, 0, 393229, 1, 0, 393230, 1, 0, 458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458763, 1, 0, 458762, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, -65523, 1, 0, -65522, 1, 0, 458751, 6, 0, 524287, 1, 0, 589823, 1, 0, 1, 0, 0, 262145, 0, 0, 196610, 0, 0, 3, 0, 0, 131075, 0, 0, 262147, 0, 0, 196612, 0, 0, 5, 0, 0, 131077, 0, 0, 262149, 0, 0, 196614, 0, 0, 7, 0, 0, 131079, 0, 0, 262151, 0, 0, 196616, 0, 0, 9, 0, 0, 131081, 0, 0, 262153, 0, 0, 2, 2, 0, 4, 2, 0, 6, 2, 0, 8, 2, 0, 65538, 0, 0, 65540, 0, 0, 65542, 0, 0, 65544, 0, 0, 65545, 2, 0, 65543, 2, 0, 65541, 2, 0, 65539, 2, 0, 65537, 2, 0, 131074, 2, 0, 131076, 2, 0, 131078, 2, 0, 131080, 2, 0, 196617, 2, 0, 196615, 2, 0, 196613, 2, 0, 196611, 2, 0, 196609, 2, 0, 262146, 2, 0, 262148, 2, 0, 262150, 2, 0, 262152, 2, 0, -65536, 262150, 0, -65535, 262150, 0, -65534, 262150, 0, -65533, 262150, 0, -65532, 262150, 0, -65531, 262150, 0, -65530, 262150, 0, -65529, 262150, 0, -65528, 262150, 0, -65527, 262150, 0, -65526, 524294, 0, -65525, 6, 0, 10, 196614, 0, 11, 6, 0, 65546, 196614, 0, 65547, 6, 0, 131082, 196614, 0, 131083, 6, 0, 196618, 196614, 0, 196619, 6, 0, 262155, 6, 0, 262154, 196614, 0, 327690, 458758, 0, 327689, 131078, 0, 327688, 131078, 0, 327687, 131078, 0, 327686, 131078, 0, 327685, 131078, 0, 327684, 131078, 0, 327683, 131078, 0, 327682, 131078, 0, 327681, 131078, 0, 327680, 131078, 0, -1, 327686, 0, 65535, 655366, 0, 131071, 589830, 0, 196607, 589830, 0, 262143, 589830, 0, 327679, 720902, 0, 393215, 393222, 0, 327691, 6, 0, -65524, 6, 0, 12, 6, 0, 65548, 6, 0, 131084, 6, 0, 196620, 6, 0, 262156, 6, 0, 327692, 6, 0, 393228, 6, 0, 196621, 1, 0, 262157, 1, 0, 327693, 1, 0, 0, 4, 0, 65536, 4, 0, 131072, 4, 0, 196608, 4, 0, 262144, 4, 0, 131073, 0, 0)
layer_1/name = "Layer1"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(950, 681)
limit_enabled = false

[node name="UI" parent="." node_paths=PackedStringArray("game_over_ui") instance=ExtResource("9_xk3qw")]
game_over_ui = NodePath("../GameOverUI")

[node name="PauseMenu" parent="UI" index="6"]
offset_left = 275.0
offset_top = -140.0
offset_right = 1644.0
offset_bottom = 978.0

[node name="LabelWaveCenter" parent="UI" index="8"]
offset_left = 1532.0
offset_top = 458.0
offset_right = 2598.0
offset_bottom = 754.0

[node name="WaveTimer" type="Timer" parent="."]
one_shot = true

[node name="GameOverUI" parent="." instance=ExtResource("8_58mf7")]
process_mode = 3
visible = false
z_index = 1000

[node name="ColorRect" parent="GameOverUI" index="0"]
offset_left = -2.0
offset_top = -4.0
offset_right = 1918.0
offset_bottom = 1076.0

[node name="Label" parent="GameOverUI" index="1"]
offset_left = 705.0
offset_top = 426.0
offset_right = 1248.0
offset_bottom = 563.0

[node name="RetryButton" parent="GameOverUI" index="2"]
offset_left = 670.0
offset_top = 729.0
offset_right = 881.0
offset_bottom = 784.0
toggle_mode = true
action_mode = 0

[node name="ExitButton" parent="GameOverUI" index="3"]
offset_left = 1010.0
offset_top = 728.0
offset_right = 1221.0
offset_bottom = 783.0
toggle_mode = true
action_mode = 0

[node name="TurretManager" parent="." node_paths=PackedStringArray("tilemap") instance=ExtResource("9_py7eb")]
tilemap = NodePath("../TileMap")

[node name="EnemySpawner" parent="." node_paths=PackedStringArray("tilemap", "label_wave", "label_enemies", "wave_timer", "initial_delay_timer", "label_wave_center", "animation_player", "victory_screen", "next_wave_delay_timer") instance=ExtResource("10_l5mna")]
tilemap = NodePath("../TileMap")
label_wave = NodePath("../UI/LabelWave")
label_enemies = NodePath("../UI/LabelEnemies")
wave_timer = NodePath("../WaveTimer")
initial_delay_timer = NodePath("InitialDelayTimer")
label_wave_center = NodePath("../UI/LabelWaveCenter")
animation_player = NodePath("../UI/AnimationPlayer")
victory_screen = NodePath("../VictoryScreen")
next_wave_delay_timer = NodePath("NextWaveDelayTimer")

[node name="PointManager" parent="." node_paths=PackedStringArray("turret_manager", "label_points", "PointsBar") instance=ExtResource("11_dpoto")]
turret_manager = NodePath("../TurretManager")
label_points = NodePath("../UI/TurretSelector/PointsBar/ScrapPoints")
PointsBar = NodePath("../UI/TurretSelector/PointsBar")

[node name="GridInitializer" type="Node2D" parent="." node_paths=PackedStringArray("tilemap")]
script = ExtResource("11_lhqd2")
tilemap = NodePath("../TileMap")

[node name="Colorscale Filter" parent="." instance=ExtResource("15_lkvta")]

[node name="VictoryScreen" parent="." instance=ExtResource("16_evuaq")]
visible = false

[connection signal="timeout" from="WaveTimer" to="EnemySpawner" method="_on_wave_timer_timeout"]
[connection signal="turret_placed" from="TurretManager" to="PointManager" method="_on_turret_placed"]

[editable path="UI"]
[editable path="GameOverUI"]
[editable path="EnemySpawner"]
